--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       height: 256px; /* Explicit height */
       background-color: #fce7f3; /* Default pink background */
       background-image: none; /* Default no image */
-      background-size: contain; /* Fit entire image, no cropping */
+      background-size: 100% 100%; /* Stretch to fit box width and height */
       background-position: center; /* Center the image */
       background-repeat: no-repeat; /* Prevent tiling */
     }
