--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         position: absolute;
         top: 10px;
         right: 10px;
-        width: 64px; /* Reduced size for mobile to avoid overlap */
-        height: 64px;
+        width: 128px;
+        height: 128px;
       }
     }
     .message-bubble {
